add navbar, logo

--- a/index.html
+++ b/index.html
@@ -7,33 +7,31 @@
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <header>
-    <div class=headerimg>
-      <img src="img/wikipedia-logo.jpg" alt="">
-    </div>
-    <div class="container">
       <div class="row">
-      <div class="col-sm-3">
-        <div class="col-sm-4">
-          <ul class="nav nav-tabs">
-            <li role="presenation" class="active"><a href="#">Main Page</a></li>
-            <li role="presenation"><a href="#">Talk</a></li>
-          </ul>
-        </div>
-        <div class="col-sm-5">
-          <ul class="nav nav-tabs">
-            <li role="presenation"><a href="#">Read</a></li>
-            <li role="presenation"><a href="#">View Source</a></li>
-            <li role="presenation"><a href="#">View History</a></li>
-          </ul>
+        <div class="col-sm-2">
+          <div class=headerimg>
+            <img src="img/wikipedia-logo.jpg" alt="">
+          </div>
         </div>
       </div>
-  </div>
+      <div class="container view">
+        <div class="row">
+          <div class="col-sm-4">
+            <ul class="nav nav-tabs">
+              <li role="presenation" class="active"><a href="#">Main Page</a></li>
+              <li role="presenation"><a href="#">Talk</a></li>
+            </ul>
+          </div>
+          <div class="col-sm-8">
+            <ul class="nav nav-tabs">
+              <li role="presenation"><a href="#">Read</a></li>
+              <li role="presenation"><a href="#">View Source</a></li>
+              <li role="presenation"><a href="#">View History</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
   </header>
   <body>
-    <div class="container">
-      <div class="">
-
-      </div>
-    </div>
   </body>
 </html>
