adjust panel, basic sidebar

--- a/index.html
+++ b/index.html
@@ -7,31 +7,42 @@
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <header>
-      <div class="row">
-        <div class="col-sm-2">
-          <div class=headerimg>
-            <img src="img/wikipedia-logo.jpg" alt="">
-          </div>
+    <div class="row">
+      <div class="col-sm-2">
+        <div class=headerimg>
+          <img src="img/wikipedia-logo.jpg" alt="">
         </div>
       </div>
-      <div class="container view">
-        <div class="row">
-          <div class="col-sm-4">
-            <ul class="nav nav-tabs">
-              <li role="presenation" class="active"><a href="#">Main Page</a></li>
-              <li role="presenation"><a href="#">Talk</a></li>
-            </ul>
-          </div>
-          <div class="col-sm-8">
-            <ul class="nav nav-tabs">
-              <li role="presenation"><a href="#">Read</a></li>
-              <li role="presenation"><a href="#">View Source</a></li>
-              <li role="presenation"><a href="#">View History</a></li>
-            </ul>
-          </div>
+    <div class="container view">
+        <div class="col-sm-4">
+          <ul class="nav nav-tabs">
+            <li role="presenation" class="active"><a href="#">Main Page</a></li>
+            <li role="presenation"><a href="#">Talk</a></li>
+          </ul>
+        </div>
+        <div class="col-sm-8">
+          <ul class="nav nav-tabs">
+            <li role="presenation"><a href="#">Read</a></li>
+            <li role="presenation"><a href="#">View Source</a></li>
+            <li role="presenation"><a href="#">View History</a></li>
+          </ul>
         </div>
       </div>
+    </div>
   </header>
   <body>
+    <div class="container-fluid">
+      <div class="panel panel-default welcome">
+        <h3>Welcome to <a href="#">Wikipedia</a>,</h3>
+        <div "panel-body">
+          <p>the <a href="#">free encyclopedia</a> that <a href="#">anyone can edit.</a></p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-3">
+          <a href="#">lorem</a>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
