--- a/index.html
+++ b/index.html
@@ -7,27 +7,25 @@
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <header>
-    <div class="row">
+    <div class="container-fluid">
       <div class="col-sm-2">
         <div class=headerimg>
           <img src="img/wikipedia-logo.jpg" alt="">
         </div>
       </div>
-    <div class="container view">
         <div class="col-sm-4">
-          <ul class="nav nav-tabs">
+          <ul class="nav nav-tabs view">
             <li role="presenation" class="active"><a href="#">Main Page</a></li>
             <li role="presenation"><a href="#">Talk</a></li>
           </ul>
         </div>
-        <div class="col-sm-8">
-          <ul class="nav nav-tabs">
+        <div class="col-sm-6">
+          <ul class="nav nav-tabs view">
             <li role="presenation"><a href="#">Read</a></li>
             <li role="presenation"><a href="#">View Source</a></li>
             <li role="presenation"><a href="#">View History</a></li>
           </ul>
         </div>
-      </div>
     </div>
   </header>
   <body>
