adding sidebar and welcome links with columns

--- a/index.html
+++ b/index.html
@@ -31,7 +31,13 @@
   <body>
     <div class="container-fluid">
       <div class="col-sm-2">
-        <a href="#">lorem</a>
+        <ul class="sidebar_links">
+          <li><a href="#">lorem</a></li>
+          <li><a href="#">lorem</a></li>
+          <li><a href="#">lorem</a></li>
+          <li><a href="#">lorem</a></li>
+          <li><a href="#">lorem</a></li>
+        </ul>
       </div>
       <div class="col-sm-10">
         <div class="panel panel-default welcome">
@@ -39,6 +45,11 @@
           <div "panel-body">
             <p>the <a href="#">free encyclopedia</a> that <a href="#">anyone can edit.</a></p>
           </div>
+          <ul class="welcome_links">
+            <li>Arts</li>
+            <li>Arts</li>
+            <li>Arts</li>
+          </ul>
         </div>
       </div>
     </div>
