--- a/index.html
+++ b/index.html
@@ -29,29 +29,29 @@
     </div>
   </header>
   <body>
-    <div class="container-fluid">
-      <div class="col-sm-2">
-        <ul class="sidebar_links">
-          <li><a href="#">lorem</a></li>
-          <li><a href="#">lorem</a></li>
-          <li><a href="#">lorem</a></li>
-          <li><a href="#">lorem</a></li>
-          <li><a href="#">lorem</a></li>
-        </ul>
-      </div>
-      <div class="col-sm-10">
-        <div class="panel panel-default welcome">
-          <h3>Welcome to <a href="#">Wikipedia</a>,</h3>
-          <div "panel-body">
-            <p>the <a href="#">free encyclopedia</a> that <a href="#">anyone can edit.</a></p>
-          </div>
-          <ul class="welcome_links">
+    <div class="container-fluid welcome">
+        <div class="col-sm-2">
+          <ul class="sidebar_links">
+            <li><a href="#">lorem</a></li>
+            <li><a href="#">lorem</a></li>
+            <li><a href="#">lorem</a></li>
+            <li><a href="#">lorem</a></li>
+            <li><a href="#">lorem</a></li>
+          </ul>
+        </div>
+        <div class="col-sm-6">
+            <h3>Welcome to <a href="#">Wikipedia</a>,</h3>
+            <div class="">
+              <p>the <a href="#">free encyclopedia</a> that <a href="#">anyone can edit.</a></p>
+            </div>
+        </div>
+        <div class="col-sm-4">
+          <ul>
             <li>Arts</li>
             <li>Arts</li>
             <li>Arts</li>
           </ul>
         </div>
       </div>
-    </div>
   </body>
 </html>
