finalize wiki site

--- a/index.html
+++ b/index.html
@@ -6,51 +6,52 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/styles.css">
   </head>
-  <header>
-    <div class="container-fluid">
-      <div class="col-sm-2">
-        <div class=headerimg>
-          <img src="img/wikipedia-logo.jpg" alt="">
-        </div>
-      </div>
-        <div class="col-sm-4">
-          <ul class="nav nav-tabs view">
-            <li role="presenation" class="active"><a href="#">Main Page</a></li>
-            <li role="presenation"><a href="#">Talk</a></li>
-          </ul>
-        </div>
-        <div class="col-sm-6">
-          <ul class="nav nav-tabs view">
-            <li role="presenation"><a href="#">Read</a></li>
-            <li role="presenation"><a href="#">View Source</a></li>
-            <li role="presenation"><a href="#">View History</a></li>
-          </ul>
-        </div>
-    </div>
-  </header>
   <body>
-    <div class="container-fluid welcome">
-        <div class="col-sm-2">
-          <ul class="sidebar_links">
-            <li><a href="#">lorem</a></li>
-            <li><a href="#">lorem</a></li>
-            <li><a href="#">lorem</a></li>
-            <li><a href="#">lorem</a></li>
-            <li><a href="#">lorem</a></li>
-          </ul>
-        </div>
-        <div class="col-sm-6">
-            <h3>Welcome to <a href="#">Wikipedia</a>,</h3>
-            <div class="">
-              <p>the <a href="#">free encyclopedia</a> that <a href="#">anyone can edit.</a></p>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-sm-2">
+            <div class=headerimg>
+              <img src="img/wikipedia-logo.jpg" alt="">
             </div>
-        </div>
-        <div class="col-sm-4">
-          <ul>
-            <li>Arts</li>
-            <li>Arts</li>
-            <li>Arts</li>
-          </ul>
+          </div>
+            <div class="col-sm-4">
+              <ul class="nav nav-tabs view">
+                <li role="presenation" class="active"><a href="#">Main Page</a></li>
+                <li role="presenation"><a href="#">Talk</a></li>
+              </ul>
+            </div>
+            <div class="col-sm-6">
+              <ul class="nav nav-tabs view">
+                <li role="presenation"><a href="#">Read</a></li>
+                <li role="presenation"><a href="#">View Source</a></li>
+                <li role="presenation"><a href="#">View History</a></li>
+              </ul>
+            </div>
+      </div>
+    <div class="container-fluid">
+        <div class="row">
+          <div class="col-sm-2">
+            <ul class="sidebar_links">
+              <li><a href="#">lorem</a></li>
+              <li><a href="#">lorem</a></li>
+              <li><a href="#">lorem</a></li>
+              <li><a href="#">lorem</a></li>
+              <li><a href="#">lorem</a></li>
+            </ul>
+          </div>
+          <div class="col-sm-6">
+              <h3>Welcome to <a href="#">Wikipedia</a>,</h3>
+              <div class="">
+                <p>the <a href="#">free encyclopedia</a> that <a href="#">anyone can edit.</a></p>
+              </div>
+          </div>
+          <div class="col-sm-4">
+            <ul>
+              <li>Arts</li>
+              <li>Arts</li>
+              <li>Arts</li>
+            </ul>
+          </div>
         </div>
       </div>
   </body>
